--- a/01_call_apply_bind.html
+++ b/01_call_apply_bind.html
@@ -16,6 +16,62 @@
     2. 自定义call()/apply()
     3. 自定义实现bind()
   -->
+
+  <script>
+    /* 自定义call() */
+    Function.prototype.call = function (obj, ...rest) {
+      // console.log('my call()')
+      // this(...rest) // 直接调用, this是window, 不能用
+
+      // 对obj做特殊值处理
+      if (obj===null || obj===undefined) {
+        return this(...rest)
+        // obj = window
+      }
+
+      // 给obj添加一个临时的方法: 方法名: tempFn: this
+      obj.tempFn = this
+      // 通过obj调用tempFn() ==> this()
+      const result = obj.tempFn(...rest)  // this()
+      // 删除临时的方法
+      delete obj.tempFn
+
+      return result
+    }
+
+     /* 自定义apply() */
+     Function.prototype.apply = function (obj, args) {
+      // console.log('my apply()')
+      // this(...rest) // 直接调用, this是window, 不能用
+
+      // 对obj做特殊值处理
+      if (obj===null || obj===undefined) {
+        return this(...args)
+        // obj = window
+      }
+
+      // 给obj添加一个临时的方法: 方法名: tempFn: this
+      obj.tempFn = this
+      // 通过obj调用tempFn() ==> this()
+      const result = obj.tempFn(...args)  // this()
+      // 删除临时的方法
+      delete obj.tempFn
+
+      return result
+    }
+
+    /* 自定义bind() */
+    Function.prototype.bind = function (obj, ...args) {
+      const that = this
+      // console.log('my bind()')
+      // 返回一个新的函数
+      return function (...args2) {
+        // 新函数内部会执行原来函数(通过call执行)
+        return that.call(obj, ...args, ...args2)
+      }
+    }
+  </script>
+
   <script>
 
     function fn(a, b) {
@@ -27,47 +83,10 @@
     fn.call(obj, 1, 2) // 立即调用函数, this是第一个参数的值
     fn.call(null, 1, 2)
     fn.apply(obj, [3, 4])
-    fn.bind(obj)(6, 7)  // 返回一个新函数==> 执行新函数 => 内部会执行原来的函数, 原函数中的this为bind的第一个参数
+    fn.bind(obj, 5)(6, 7)  // 返回一个新函数==> 执行新函数 => 内部会执行原来的函数, 原函数中的this为bind的第一个参数
     // fn(5, 6)
     fn.bind(obj, 8, 11)(9, 10)
   </script>
-
-  <script>
-    /* 自定义函数对象的call方法 */
-    Function.prototype.call = function (obj, ...args) {
-      // 如果传入的是null/undefined, this指定为window
-      obj = obj || window
-      // 给obj添加一个方法: 属性名任意, 属性值必须当前调用call的函数对象
-      obj.tempFn = this
-      // 通过obj调用这个方法
-      obj.tempFn(...args)
-      // 删除新添加的方法
-      delete obj.tempFn
-    }
-
-    /* 自定义函数对象的apply方法 */
-    Function.prototype.apply = function (obj, args) {
-      // 如果传入的是null/undefined, this指定为window
-      obj = obj || window
-      // 给obj添加一个方法: 属性名任意, 属性值必须当前调用call的函数对象
-      obj.tempFn = this
-      // 通过obj调用这个方法
-      obj.tempFn(...args)
-      // 删除新添加的方法
-      delete obj.tempFn
-    }
-
-    /* 
-      自定义函数对象的bind方法
-    */
-    Function.prototype.bind = function (obj, ...args) {
-      const that = this
-      return function (...args2) {
-        that.call(obj, ...args, ...args2)
-      }
-    }
-  </script>
-  
 
 </body>
 </html>
