--- a/01_call_apply_bind.html
+++ b/01_call_apply_bind.html
@@ -10,11 +10,16 @@
 
   <!-- 
     1. 区别call()/apply()/bind()
-      call()/apply(): 调用函数, 指定函数中的this为第一个参数的值
-      bind(obj): 返回一个新的函数, 新函数内部会调用原来的函数, 且this为第一参数的值
-
+        call()/apply(): 调用函数, 指定函数中的this为第一个参数的值
+        bind(obj): 返回一个新的函数, 新函数内部会调用原来的函数, 且this为第一参数的值
     2. 自定义call()/apply()
+        1). 给对象添加一个暂时的方法, 指向的就是当前函数
+        2). 通过对象调用执行当前函数 ===> 函数的this就为当前指定的对象
+        3). 删除暂时的方法
+        4). 返回函数执行的返回值
     3. 自定义实现bind()
+        1). 返回一个新函数
+        2). 新函数内部通过call来执行原来函数, 指定this为bind的第一个参数
   -->
 
   <script>
